--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,39 +10,16 @@ on:
         description: 'Version to release (e.g., v1.0.0)'
         required: true
 
-jobs:
-  create-release:
-    runs-on: ubuntu-latest
-    outputs:
-      upload_url: ${{ steps.create_release.outputs.upload_url }}
-      version: ${{ env.VERSION }}
-    steps:
-      - name: Get version
-        id: tag
-        run: |
-          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
-            VERSION="${{ github.event.inputs.version }}"
-          else
-            VERSION="${{ github.ref }}"
-            VERSION="${VERSION#refs/tags/}"
-          fi
-          echo "VERSION=${VERSION}" >> $GITHUB_ENV
-          echo "version=${VERSION}" >> $GITHUB_OUTPUT
-      
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ env.VERSION }}
-          release_name: Release ${{ env.VERSION }}
-          draft: false
-          prerelease: false
+permissions:
+  contents: write
+  releases: write
 
+jobs:
   build-and-release:
-    needs: create-release
     runs-on: ${{ matrix.os }}
+    permissions:
+      contents: write
+      releases: write
     strategy:
       matrix:
         include:
@@ -87,12 +64,8 @@ jobs:
       run: |
         pyinstaller --onefile --windowed --icon=wb.ico --name=world_builder --add-data="world_builder_config.json;." --add-data="BZONE.ttf;." world_builder.py
     
-    - name: Upload Release Asset
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Upload Release Assets
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
       with:
-        upload_url: ${{ needs.create-release.outputs.upload_url }}
-        asset_path: ${{ matrix.asset_path }}
-        asset_name: ${{ matrix.asset_name }}-${{ needs.create-release.outputs.version }}
-        asset_content_type: application/octet-stream
+        files: ${{ matrix.asset_path }}
