--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,15 +37,26 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     
+    - name: Install system dependencies (Linux)
+      if: runner.os == 'Linux'
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y python3-tk python3-dev python3-pip
+    
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.11'
     
-    - name: Install dependencies
+    - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+    
+    - name: Install PIL/Pillow optional dependencies (Linux)
+      if: runner.os == 'Linux'
+      run: |
+        sudo apt-get install -y libjpeg-dev libpng-dev
     
     - name: Build with PyInstaller (Linux/macOS)
       if: runner.os != 'Windows'
